--- a/.github/workflows/build-new-release.yaml
+++ b/.github/workflows/build-new-release.yaml
@@ -84,6 +84,7 @@ jobs:
           mv tizenbrew-app/TizenBrew/release/TizenBrewNextGeneration.wgt tizenbrew-app/TizenBrew/release/TizenBrewStandalone-Old.wgt
 
       - name: Package TizenBrew as USB Demo Package
+        continue-on-error: true
         working-directory: tizenbrew-app/TizenBrew
         run: |
           wgt-to-usb release/TizenBrewStandalone-Old.wgt 
@@ -97,7 +98,11 @@ jobs:
       - name: Zip USB Demo Package
         working-directory: tizenbrew-app/TizenBrew
         run: |
-          zip -r release/TizenBrewStandaloneUSBDemo.zip userwidget/
+          if [ -d "userwidget" ]; then
+            zip -r release/TizenBrewStandaloneUSBDemo.zip userwidget/
+          else
+            echo "USB Demo directory (userwidget) missing. Skipping zip."
+          fi
       
       - name: Release TizenBrew Build Results
         uses: softprops/action-gh-release@v1
