fix(service): ignore dist and transpiled and use versioned asset loading for mods and bump to 2.1.1

--- a/tizenbrew-app/TizenBrew/service-nextgen/service/transpiled/package.json
+++ b/tizenbrew-app/TizenBrew/service-nextgen/service/transpiled/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel . --out-dir transpiled --copy-files && npx @vercel/ncc build transpiled/index.js -o ./dist"
+    "build": "babel . --out-dir transpiled --copy-files --ignore \"dist,transpiled\" && npx @vercel/ncc build transpiled/index.js -o ./dist"
   },
   "keywords": [],
   "author": "",
